# ukibak

./: Cargo.toml  LICENSE  README.md
src/: boottime.rs  main.rs  peparser.rs
systemd/: ukibak.service  ukibak.timer
testdata/efi/EFI/Linux/: test_noinitrd.efi
testdata/efivarfs/: LoaderImageIdentifier-4a67b082-0a4c-41cf-b6c7-440b29bb8c4f
testdata/efivarfs/abspath/: LoaderImageIdentifier-4a67b082-0a4c-41cf-b6c7-440b29bb8c4f
testdata/pe/: linux.efi
