[package]
name = "ukibak"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "help", "usage", "error-context", "derive", "env"] }
libc = "0.2"
quick-error = "2"
byteorder = "1.4.3"
log = "0.4"
simple_logger = { version = "4", default-features = false, features = ["stderr"] }
const-fnv1a-hash = "1"